# scoreboard

./: .gitignore  README.md  TODO.md  config.toml  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: codeql.yml  fortify.yml  python-app.yml
board_header/: __init__.py  board.py  mcp23017.py  virtual_mcp23017.py
config/: board_layout.toml  characters.toml
custom_lib/mcp23017/: mcp23017_new.py
plugins/time/: config.toml  time.py
scripts/: json_to_toml.py
src/: activator.py  board.py  board_layout.json  board_layout.toml  chiffres.toml  dummything.py  plugin.py  resources.py  scoreboard.py  server.py  test.py
src/api/: digit.py  parent_resource_concepts.py  single_led_toggle.py  test.py
src/api/endpoints/: __init__.py  digit.py  layout.py  single_led_toggle.py  test.py
src/board_header/: __init__.py  mcp23017_h.py
src/calc/: index.html  index.js  style.css
src/helper/: api_manager_decs_discovery.py  board_linker.py  conf_loader.py  config.py  get_wrapped_classes.py  plugin.py  race_condition.py
src/modules/time/: config.toml
src/plugins/controls/: __init__.py  config.toml  control_types.py  controls.py
src/plugins/time/: __init__.py  api_endpoints.py  config.toml  time.py
src/resources/: digit.py  parent_resource_concepts.py  single_led_toggle.py  test.py
src/things/: activator.py  dummything.py
src/things/scoreboard/: board_layout.json  controls.py  digits.py  extender.toml  scoreboard.py
src/www/: index.html  style.css
test/: single_led.toml  test.py
tests/: test_scoreboard.py  test_true.py
(+1 files in other folders)
