[tool.poetry]
name = "scoreboard"
version = "0.1.0"
description = ""
authors = ["seekingmeanings <git-j@mail.o-family.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-RESTful = "^0.3.10"
mcp23017 = "^1.1.0"
public = "^2020.12.3"
tomlkit = "^0.12.5"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = ""
testpaths = [
    "tests",
]